Final updates Weeks 6 and 7
